<resources>
    <string name="app_name">WishList</string>

    <!-- Sign in -->

    <string name="Sign_In_Title">Sign in</string>
    <string name="UserName_SI">Enter your user or email address</string>
    <string name="UserName_hint_SI">User or email address</string>
    <string name="Password_SI">Enter your Password</string>
    <string name="Password_hint_SI">Password</string>
    <string name="No_Account">No Account?</string>
    <string name="ChangeBox_SI">Sign up</string>
    <string name="Sign_In_Button">Sign in</string>
    <string name="ForgetPassword">Forget Password</string>

    <!-- Sign up -->

    <string name="Sign_Up_Title">Sign up</string>
    <string name="Name_SU">Enter your name</string>
    <string name="Name_hint_SU">First name</string>
    <string name="Last_Name_SU">Enter your last name</string>
    <string name="Last_Name_hint_SU">Last name</string>
    <string name="EmailOrPhone_hint_SU">Email or phone number</string>
    <string name="Password_hint_SU">Password</string>
    <string name="Have_Account">Have an account?</string>
    <string name="Sign_In_Link_SU">Sign in</string>
    <string name="Sign_Up_Button">Sign up</string>

    <!-- Account -->

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="edit_account">Edit Account</string>
    <string name="save_account">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Log out</string>

    <string name="update_succesful">Update success</string>

    <!-- WishLists -->

    <string name="Title_wishlist">Wishlists</string>

    <!-- gift -->

    <string name="remove">Remove</string>
    <string name="Unreserve">UN-reserve</string>
    <string name="reserve">Reserve</string>
    <string name="reserved">Reserved</string>

    <!-- New WishList -->

    <string name="Title_new_wishlist">New Wishlist</string>
    <string name="Title_of_wishlist">Title</string>
    <string name="Description_of_wishlist">Description</string>
    <string name="end_day_wishlist">Day End</string>
    <string name="end_time_wishlist">Time End</string>
    <string name="Select_date">SELECT DATE</string>
    <string name="Select_time">SELECT TIME</string>
    <string name="hint_title">Christmas</string>
    <string name="hint_description">Chirstmas is coming...</string>
    <string name="Create_Button">Create</string>

    <!-- New Product -->

    <string name="Title_new_Product">New Product</string>
    <string name="Title_of_Product">Title</string>
    <string name="Description_of_Product">Description</string>
    <string name="price_Product">Price</string>
    <string name="category_Product">Category</string>
    <string name="Select_price">SELECT PRICE</string>
    <string name="Select_cagegory">SELECT CATEGORY</string>
    <string name="hint_title_product">apple</string>
    <string name="hint_description_product">Juicy apple...</string>
    <string name="Create_Button_product">Create</string>

    <!-- New Friend -->
    <string name="New_Friend">Add friend</string>
    <string name="Request_succes">Sent successfully</string>
    <string name="Accepted">Accepted successfully</string>
    <string name="Rejected">Rejected successfully</string>
    <string name="sent">SENT</string>

    <!-- Chat -->
    <string name="hint_chat">Type Message</string>

    <!-- Chats -->
    <string name="empty_chat">Start a conversation!</string>
    <string name="My_Chats">My Chats</string>
    <string name="Gifts_Chat">Gifts Chat</string>
    <string name="Request">Request</string>

    <!-- Product info -->
    <string name="product_description">Description</string>
    <string name="product_add_to_wishlist">Add to WishList</string>

    <!-- General -->
    <string name="search_hint">Search</string>

    <!-- SubMenu_user -->
    <string name="log_out">Log out</string>
    <string name="Configuration">Configuration</string>

    <!-- SubMenu_wishlist -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <!-- Error -->
    <string name="Error_204">User not found</string>
    <string name="Error_400">Bad request</string>
    <string name="Error_401">Wrong username and password combination</string>
    <string name="Error_406">Missing parameters</string>
    <string name="Error_409">Email address already registered</string>
    <string name="Error_410">No user has been edited</string>
    <string name="Error_500">User not created</string>
    <string name="Error_502">Internal Server Error</string>

    <string name="Error_Email">Please, enter a valid email</string>
    <string name="Error_Network">Check your connection</string>
    <string name="Error_Default">Unknown error occurred</string>

</resources>