<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/SignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif"
        android:text="@string/Sign_In_Title"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SI_TitleNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/UserName_SI"
        app:layout_constraintBottom_toTopOf="@+id/SI_NameBox"
        app:layout_constraintStart_toStartOf="@+id/SI_NameBox" />

    <EditText
        android:id="@+id/SI_NameBox"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#990000"
        android:ems="10"
        android:hint="@string/UserName_hint_SI"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTitle" />

    <EditText
        android:id="@+id/SI_PasswordBox"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#990000"
        android:ems="10"
        android:hint="@string/Password_hint_SI"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SI_NameBox" />

    <TextView
        android:id="@+id/SITitlePasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_SI"
        app:layout_constraintBottom_toTopOf="@+id/SI_PasswordBox"
        app:layout_constraintStart_toStartOf="@+id/SI_PasswordBox" />

    <TextView
        android:id="@+id/SI_NoAcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/No_Account"
        app:layout_constraintStart_toStartOf="@+id/SI_PasswordBox"
        app:layout_constraintTop_toBottomOf="@+id/SI_PasswordBox" />

    <TextView
        android:id="@+id/SI_SignUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ChangeBox_SI"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/SI_NoAcount"
        app:layout_constraintTop_toTopOf="@+id/SI_NoAcount" />

    <TextView
        android:id="@+id/SI_ForgetPassord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="69dp"
        android:text="@string/ForgetPassword"
        app:layout_constraintEnd_toEndOf="@+id/SI_PasswordBox"
        app:layout_constraintStart_toEndOf="@+id/SI_NoAcount"
        app:layout_constraintTop_toTopOf="@+id/SI_PasswordBox" />

    <Button
        android:id="@+id/SI_SignIn_Button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:backgroundTint="#990000"
        android:text="@string/Sign_In_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SI_PasswordBox" />





</androidx.constraintlayout.widget.ConstraintLayout>
