<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/SignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif"
        android:text="@string/Sign_In_Title"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SU_TitleNameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/UserName_SI"
        app:layout_constraintBottom_toTopOf="@+id/SU_NameBox"
        app:layout_constraintStart_toStartOf="@+id/SU_NameBox" />

    <EditText
        android:id="@+id/SU_NameBox"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/UserName_hint_SI"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTitle" />

    <EditText
        android:id="@+id/SU_PasswordBox"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/Password_hint_SI"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SU_NameBox" />

    <TextView
        android:id="@+id/SUTitlePasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_SI"
        app:layout_constraintBottom_toTopOf="@+id/SU_PasswordBox"
        app:layout_constraintStart_toStartOf="@+id/SU_PasswordBox" />

    <TextView
        android:id="@+id/SUNoAcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/No_Account"
        app:layout_constraintStart_toStartOf="@+id/SU_PasswordBox"
        app:layout_constraintTop_toBottomOf="@+id/SU_PasswordBox" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ChangeBox_SI"
        app:layout_constraintStart_toStartOf="@+id/SUNoAcount"
        app:layout_constraintTop_toTopOf="@+id/SUNoAcount" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="69dp"
        android:text="@string/ForgetPassword"
        app:layout_constraintEnd_toEndOf="@+id/SU_PasswordBox"
        app:layout_constraintStart_toEndOf="@+id/SUNoAcount"
        app:layout_constraintTop_toTopOf="@+id/SU_PasswordBox" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SU_PasswordBox" />

</androidx.constraintlayout.widget.ConstraintLayout>
