<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/AC_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red" />

    <ImageView
        android:id="@+id/avatarImage_FC"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/circle_background"
        android:contentDescription="Avatar"
        android:src="@drawable/default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title_new_wishlist"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/avatarImage_FC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatarImage_FC" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/undo_white" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Title_of_wishlist"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextText3"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="322dp"
        android:layout_height="33dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_title"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/Description_of_wishlist"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText4"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="324dp"
        android:layout_height="156dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:inputType="text|textMultiLine|textCapSentences"
        android:hint="@string/hint_description"
        android:scrollbars="vertical"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/end_day_wishlist"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/openPopupButton"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@color/white"
        android:text="@string/Select_date"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time_wishlist"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/openPopupButton_time"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/openPopupButton_time"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/Select_time"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/openPopupButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintTop_toTopOf="@+id/openPopupButton"
        android:onClick="showTimePickerPopup" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="133dp"
        android:layout_height="57dp"
        android:layout_marginBottom="46dp"
        android:text="@string/Create_Button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
