<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/NP_Text_NewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title_new_Product"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="43dp" />


    <ImageView
        android:id="@+id/NP_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/NP_Text_NewProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/NP_Text_NewProduct"
        app:srcCompat="@drawable/undo_white" />

    <TextView
        android:id="@+id/NP_Title_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Title_of_Product"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/NP_button_back"
        app:layout_constraintTop_toBottomOf="@+id/NP_button_back" />

    <EditText
        android:id="@+id/NP_editTitleText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:hint="@string/hint_title_product"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/NP_Title_Text"
        app:layout_constraintTop_toBottomOf="@+id/NP_Title_Text" />

    <TextView
        android:id="@+id/NP_Text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/Description_of_Product"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/NP_editTitleText"
        app:layout_constraintTop_toBottomOf="@+id/NP_editTitleText" />

    <EditText
        android:id="@+id/NP_editText_description"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_description_product"
        android:inputType="text|textMultiLine|textCapSentences"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/NP_editTitleText"
        app:layout_constraintStart_toStartOf="@+id/NP_Text_description"
        app:layout_constraintTop_toBottomOf="@+id/NP_Text_description" />

    <TextView
        android:id="@+id/NP_pricetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/price_Product"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/NP_editText_description"
        app:layout_constraintTop_toBottomOf="@+id/NP_editText_description" />

    <EditText
        android:id="@+id/NP_priceEditText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corners_white"
        android:ems="10"
        android:hint="@string/Select_price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/NP_pricetext"
        app:layout_constraintTop_toBottomOf="@+id/NP_pricetext" />

    <TextView
        android:id="@+id/NP_categorytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_Product"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/NP_pricetext"
        app:layout_constraintStart_toStartOf="@+id/NP_openPopupButton_category"
        app:layout_constraintTop_toTopOf="@+id/NP_pricetext" />

    <Button
        android:id="@+id/NP_openPopupButton_category"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="showTimePickerPopup"
        android:text="@string/Select_cagegory"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/NP_priceEditText"
        app:layout_constraintEnd_toEndOf="@+id/NP_editText_description"
        app:layout_constraintTop_toTopOf="@+id/NP_priceEditText" />

    <Button
        android:id="@+id/NP_button_Create"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="133dp"
        android:layout_height="57dp"
        android:layout_marginBottom="46dp"
        android:text="@string/Create_Button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/NP_imageNewProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/NP_button_Create"
        app:layout_constraintEnd_toEndOf="@+id/NP_openPopupButton_category"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="@+id/NP_priceEditText"
        app:layout_constraintTop_toBottomOf="@+id/NP_priceEditText"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/default_product_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
